# kc-user-importer

./: .example.env  .gitignore  Makefile  README.md  add_users_to_keycloak.py  example.users.json  parse_entra_users.py  pyproject.toml
groups/: README.md
kc_user_importer/: models.py
tests/: entra_bulk_users_export.csv  test_hello_world.py  test_models.py
