[tool.poetry]
name = "kc-user-importer"
version = "0.1.0"
description = ""
authors = ["Jason Hwee <1216418+hweej@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
rich = "^13.9.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watcher = "^0.4.3"
pytest-cov = "^6.0.0"
pytest-testmon = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
